# manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_AUTOMATION.md  README.md  USAGE.md  action-plan-example.md  action-plan.md  automated-dify-setup.md  engineer.txt  hackthon-prompt.txt  how-it-works.md  main.py  project-cleanup.md  project-definition.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
dify-docs/: project_analysis_prompt.md  repository_validator.sh
docs/: README.md  api-reference.md  developer-setup.md  installation.md  usage.md
examples/: basic_usage.py
hackathon-resources/: VARIABLE_GUIDE.md  aws-credentials.txt  dify-dev-setup.md  install_dify.sh  project_analysis_prompt.md  setup-instructions.md
onhax/: README.md  __main__.py  app.py  client.py  config.py  logging.py
onhax/installer/: __init__.py  __main__.py  cli.py  config.py  integration.py  requirements.txt  setup.py  system.py  web.py
onhax/installer/templates/: __init__.py  installer.html
tests/: __init__.py  test_app.py  test_client.py  test_config.py  test_installer.py
